--- a/index.css
+++ b/index.css
@@ -16,6 +16,8 @@ body {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    color: white;
+
 }
 
 input {
@@ -76,7 +78,8 @@ input {
     transition-property: opacity;
     transition-duration: 0.15s;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 
     overflow: hidden;
     position: absolute;
@@ -85,15 +88,20 @@ input {
     background-color: hsl(0, 0%, 20%);
 }
 
-.slider-text {
-    color: white;
-    font-size: 2em;
+.option {
+    margin-bottom: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.option-text {
+    font-size: 2em;
     text-align: center;
+    margin-bottom: 1em;
 }
 
 .slider {
-    margin-top: 1em;
     width: 20em;
     height: 1em;
     background-color: hsl(0, 0%, 30%);
@@ -110,4 +118,44 @@ input {
     top: -0.5em;
 
     cursor: pointer;
+}
+
+.option-detail {
+    font-size: 1.5em;
+}
+
+.toggle-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.toggle {
+    position: relative;
+    cursor: pointer;
+    margin: 0 0.5rem;
+    display: inline-block;
+    border-radius: 50em;
+    background-color: hsl(0, 0%, 30%);
+    width: 2em;
+    height: 1.25em;
+}
+
+.toggle::before {
+    content: "";
+    position: absolute;
+    z-index: 20;
+    top: 0.05em;
+    left: 0.05em;
+    
+    transition-property: left;
+    transition-duration: 0.25s;
+
+    width: 1.15rem;
+    height: 1.15rem;
+    border-radius: 50%;
+    background-color: white;
+}
+
+input[type="checkbox"]:checked ~ label::before {
+    left: 0.8em;
 }
